--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
 <script>
     function pp() {
         let p = document.getElementById("mySpan");
-        p.style.border=2px
-        p.style.border=dotted
-        p.style.border=violet
+        p.style.border="2px dotted violet";
     }
     </script>
 </head>
 <body>
 <h3>자바스크립트란?
-    <button onclick="pp">border</button>
+    <button onclick="pp()">border</button>
 </h3>
 <hr>
 <p>자바스크립트는 웹 프로그래밍 언어로서 웹 페이지를 동적 변경시킬 수 있다.</p>
